# NonaneDB

./: .gitignore  Cargo.toml  README.md  about.toml  license.html  run.bat
src/: database.rs  db.rs  main.rs  utils.rs
src/database/: bucket.rs  descriptor.rs
src/database/bucket/: config.rs  descriptor.rs  document.rs  reader.rs  writer.rs
src/database/bucket/document/field/: fieldtype.rs
src/database/bucket/writer/: queued.rs
src/db/: bucket.rs  descriptor.rs
src/db/bucket/: descriptor.rs  document.rs  reader.rs  writer.rs
src/db/bucket/document/: field.rs
src/db/bucket/document/field/: descriptor.rs  fieldtype.rs
src/utils/: numbers.rs  pool.rs  threading.rs
