[package]
name = "NonaneDB"
version = "0.1.0"
authors = ["anton"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs2 = "0.4.3"
memmap2 = "0.2.0"
page_size = "0.4.2"
sha3 = "0.9.1"
libc = "0.2.82"
snap = "1.0.3"
byteorder = "1.4.2"
bincode = "1.3.1"
serde = { version = "1.0.118", features = ["derive"] }
serde_derive = "1.0.118"
uuid = { version = "0.8", features = ["serde", "v4"] }