[package]
name = "NonaneDB"
version = "0.1.0"
authors = ["anton"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs2 = "0.4.3"
memmap2 = "0.2.0"
sha3 = "0.9.1"
libc = "0.2.82"
snap = "1.0.3"
byteorder = "1.4.2"
bincode = "1.3.1"
serde = { version = "1.0.119", features = ["derive"] }
serde_derive = "1.0.118"
uuid = { version = "0.8", features = ["serde", "v4"] }
parking_lot = "0.11"
num_cpus = "1.13.0"
page_size = "0.4.2"
log = "0.4.13"
rayon = "1.5.0"
env_logger = "0.8.2"
crossbeam-channel = "0.5.0"
crossbeam-queue = "0.3.1"
dashmap = "4.0.2"